# SQLCore

./: .gitignore  docker-compose.yml  pyproject.toml  pytest.ini  setup.cfg
.github/workflows/: publish.yml  test.yml
docker/: Dockerfile  Dockerfile.db  setup.sql
sqlcore/: async_connector.py  connector.py
tests/: test_async_connector.py  test_connector.py  test_e2e.py  test_parameterized_queries_e2e.py  test_tvf_error_handling.py
