[metadata]
name = sqlcore
version = 0.1.0
author = Your Name
author_email = your.email@example.com
description = A package for synchronous and asynchronous SQL Server access.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/sqlcore
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6

[options.packages.find]
where = .